[package]
authors = ["Rafael Varago"]
description = "A toy and mini load balancer"
edition = "2018"
name = "mini-balancer"
version = "0.1.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = {version = "1", features = ["derive"]}
structopt = "0.3"
thiserror = "1"
tokio = {version = "1", features = ["full"]}
toml = "0.5"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"

[dev-dependencies]
futures = "0.3"
